Add possibility to configure competition descriptions and properties
